# notd

./: .gitattributes  .gitignore  LICENSE  README.md  install.ps1  notd-start.vbs  pyproject.toml
config/: notd.config.example.json  notd.config.xaml
docs/: capture-format.md  index.html
src/: notd.ps1  notd.py
